# ducks

./: .gitignore  Cargo.toml
src/: main.rs
